SigmaCodebackup3rdSep/objects/Account_Subscription_Intervals__c.object
<CustomObject>
    <fields>
        <fullName>Account_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Subscription</label>
        <referenceTo>Account_Subscription__c</referenceTo>
        <relationshipLabel>Account Subscription Intervals</relationshipLabel>
        <relationshipName>Account_Subscription_Intervals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Subscription Intervals</relationshipLabel>
        <relationshipName>Account_Subscription_Intervals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Amount__c</fullName>
        <formula>(next_Billing_Amount__c+ Tax_Amount__c )  -  Paid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Renewal_Amount__c</fullName>
        <label>Last Renewal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Renewal_Date__c</fullName>
        <label>Last Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Billing_Date__c</fullName>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Not Paid</fullName>
                </value>
                <value>
                    <fullName>Partial Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Account Subscription Intervals</relationshipLabel>
        <relationshipName>Account_Subscription_Intervals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Account Subscription Intervals</relationshipLabel>
        <relationshipName>Account_Subscription_Intervals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Name__c</fullName>
        <label>Subscription Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Tax amount to add Billing Amount</description>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Usage_Type__c</fullName>
        <label>Usage Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>next_Billing_Amount__c</fullName>
        <label>Billing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Account Subscription Interval</label>
    <nameField>
        <displayFormat>ASI{0000}</displayFormat>
        <label>Account Subscription Intervals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Subscription Intervals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>